@@ -61,6 +61,8 @@ IN DEVELOPMENT
       ``bzrlib.tests.bzrdir_implementations``.
       ``bzrlib.versionedfile.InterVersionedFileTestProviderAdapter`` has moved
       to ``bzrlib.tests.interversionedfile_implementations``.
+      ``bzrlib.store.revision.RevisionStoreTestProviderAdapter`` has moved to
+      ``bzrlib.tests.revisionstore_implementations``.
       These changes are an API break in the testing infrastructure only.
       (Robert Collins)
 
